--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi
 DEV_DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi
 TEST_DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi_production
+
+username=postgres
+
+
