--- a/.env
+++ b/.env
@@ -1,7 +1,3 @@
-DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi
-DEV_DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi
-TEST_DATABASE_URL=postgres://postgres:ecosamy09@localhost:5432/jokesapi_production
-
-username=postgres
-
-
+DATABASE_URL=postgres://postgres:ecosamy09@34.168.33.188:5432/jokesapi
+DEV_DATABASE_URL=postgres://postgres:ecosamy09@34.168.33.188:5432/jokesapi
+TEST_DATABASE_URL=postgres://postgres:ecosamy09@:34.168.33.188:5432/jokesapi_production
